# Astronomican

./: Astronomican.qrc  CMakeLists.txt
include/: CameraFeed.h  DiceSet.h  MainController.h  MainWindow.h  MovableUnit.h  SceneManager.h  SceneWidget.h  ViewManager.h
src/: Astronomican_main.cxx  CameraFeed.cpp  DiceSet.cpp  MainController.cpp  MainWindow.cpp  MovableUnit.cpp  SceneManager.cpp  SceneWidget.cpp  ViewManager.cpp
ui/: Checkerboard.qml  MainWindow.qml  MainWindow.ui  circle.qml  core.js  qmldir
